fix: Fix layout for getting data from API, add ToolBar synchronized with navigation and include dependencies that needed in app module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="image_profile_of_user">Image profile of user</string>
     <string name="sample_user_name">FirstName LastName</string>
     <string name="email_sample">EMAIL@EMAIL.COM\n</string>
+    <string name="judul">Judul</string>
+    <string name="back">back</string>
 </resources>
